force-app/main/default/objects/Visit__c/Visit__c.object-meta.xml
<CustomObject>
    <description>A paid visit (drop-in admission, party, camp day) from a Square order.</description>
    <label>Visit</label>
    <nameField>
        <displayFormat>V-{000000}</displayFormat>
        <label>Visit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>