force-app/main/default/objects/Visit__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Order total from Square. Money is copied, never computed by an agent.</description>
    <label>Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>