force-app/main/default/objects/Visit__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>Square order source, e.g. Point of Sale or Online.</description>
    <label>Channel</label>
    <length>60</length>
    <type>Text</type>
</CustomField>