force-app/main/default/objects/Visit__c/fields/Counts_As_Visit__c.field-meta.xml
<CustomField>
    <fullName>Counts_As_Visit__c</fullName>
    <defaultValue>true</defaultValue>
    <description>False when the order was only a deposit, gift card or cash back (paid, but nobody came in).</description>
    <label>Counts As Visit</label>
    <type>Checkbox</type>
</CustomField>