force-app/main/default/objects/Visit__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <description>Discounts and deposits applied on the Square order.</description>
    <label>Discount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>