force-app/main/default/objects/Visit__c/fields/Item_Count__c.field-meta.xml
<CustomField>
    <fullName>Item_Count__c</fullName>
    <description>Total quantity of items on the order.</description>
    <label>Item Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>