force-app/main/default/objects/Visit__c/fields/Item_Summary__c.field-meta.xml
<CustomField>
    <fullName>Item_Summary__c</fullName>
    <description>Item names and quantities, e.g. 2x Admission, 1x Pizza. No customer or card details.</description>
    <label>Item Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>