force-app/main/default/objects/Visit__c/fields/Last_Synced__c.field-meta.xml
<CustomField>
    <fullName>Last_Synced__c</fullName>
    <description>When the nightly Square sync last wrote this row.</description>
    <label>Last Synced</label>
    <type>DateTime</type>
</CustomField>