force-app/main/default/objects/Visit__c/fields/Location_Id__c.field-meta.xml
<CustomField>
    <fullName>Location_Id__c</fullName>
    <description>Square location of the sale.</description>
    <label>Square Location Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>