force-app/main/default/objects/Visit__c/fields/Minor__c.field-meta.xml
<CustomField>
    <fullName>Minor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child</label>
    <referenceTo>Minor__c</referenceTo>
    <relationshipLabel>Visits</relationshipLabel>
    <relationshipName>Visits</relationshipName>
    <type>Lookup</type>
</CustomField>