force-app/main/default/objects/Visit__c/fields/Source_URL__c.field-meta.xml
<CustomField>
    <fullName>Source_URL__c</fullName>
    <description>Deep link to the fact in its source system. Required unless Source System = Salesforce.</description>
    <label>Source URL</label>
    <type>Url</type>
</CustomField>