force-app/main/default/objects/Visit__c/fields/Square_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Square_Customer_Id__c</fullName>
    <description>Square customer on the order. Used to match the paying guardian by Contact.Square_Id__c.</description>
    <label>Square Customer Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>