force-app/main/default/objects/Visit__c/fields/Square_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Square_Order_Id__c</fullName>
    <description>Square order id. Upsert key for the nightly Square sync.</description>
    <label>Square Order Id</label>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>