force-app/main/default/objects/Visit__c/fields/Tax__c.field-meta.xml
<CustomField>
    <fullName>Tax__c</fullName>
    <description>Tax on the Square order.</description>
    <label>Tax</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>