force-app/main/default/objects/Visit__c/fields/Tip__c.field-meta.xml
<CustomField>
    <fullName>Tip__c</fullName>
    <description>Tip on the Square order.</description>
    <label>Tip</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>