force-app/main/default/objects/Visit__c/fields/Visited_At__c.field-meta.xml
<CustomField>
    <fullName>Visited_At__c</fullName>
    <label>Visited At</label>
    <type>DateTime</type>
</CustomField>