force-app/main/default/objects/Visit__c/validationRules/Source_Refs_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Source_Refs_Required</fullName>
    <active>true</active>
    <description>Every non-native visit carries a source URL; Square visits carry the order id.</description>
    <errorConditionFormula>OR(
    AND(NOT(ISPICKVAL(Source_System__c, "Salesforce")), ISBLANK(Source_URL__c)),
    AND(ISPICKVAL(Source_System__c, "Square"), ISBLANK(Square_Order_Id__c))
)</errorConditionFormula>
    <errorDisplayField>Source_URL__c</errorDisplayField>
    <errorMessage>Source URL is required unless Source System is Salesforce, and Square visits need the Square Order Id.</errorMessage>
</ValidationRule>